Ajustado Title do desafio dos Palíndomos

--- a/desafio-palindromo/index.html
+++ b/desafio-palindromo/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>Desafio dos Quadrados</title>
+        <title>Desafio dos Palíndromos</title>
         <script src="./script.js" defer></script>
     </head>
     <body>
@@ -15,7 +15,6 @@
                 <input type="text" id="prompt" placeholder="Insira a palavra a ser verificada..." autocomplete="off">
                 <button type="submit">Verificar</button>
             </form>
-
             <div id="result"></div>
         </div>
     </body>
