--- a/people-searcher/index.html
+++ b/people-searcher/index.html
@@ -14,6 +14,7 @@
             <form id="searchForm">
                 <input type="text" placeholder="Digite o nome do usuário..." id="search" autocomplete="off">
                 <button id="sendBtn" type="submit"><img src="https://www.iconsdb.com/icons/preview/white/search-3-xxl.png" alt="Pesquisar" /></button>
+                <div id="suggestions" hidden></div>
             </form>
             <div id="peopleContainer"></div>
         </div>
